--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                     <a class="nav-link" href="">Contact</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="">Sign In</i></a>
+                                    <a class="nav-link" href="sign-in.html">Sign In</i></a>
                                 </li>
                                 <li class="nav-item">
                                     <div class="dropdown">
