--- a/sign-up.html
+++ b/sign-up.html
@@ -35,7 +35,7 @@
     <!-- =========================================================================================== -->
     <!--=========================Main===================== -->
     <!-- =========================================================================================== -->
-    <main class="container">
+    <main class="container pb-5">
         <div class="">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-4 col-md-7 col-sm-12 account-main-col ">
