--- a/sign-up.html
+++ b/sign-up.html
@@ -147,16 +147,16 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 mt-2">
+                                <div class="col-lg-7 mt-2 mx-auto">
                                   
-                                <div class="sign__btn w-100 my-4 mt-2 ">
+                                <div class="sign__btn w-100 my-4 mt-2 mx-auto">
                                     <button type="submit" id="submit-btn" class="w-100"><a href="sign-in.html "
                                             class="sign-in">Sign-Up</a></button>
                                 </div>
                                
                                 </div>
-                                <div class="col-lg-6 mt-2">
-                                    <div class="continue-google__btn w-100 my-4 mt-2 ">
+                                <div class="col-lg-7 mt-2 mx-auto">
+                                    <div class="continue-google__btn w-100 ">
                                         <button type="submit" id="submit-btn" class="w-100 continue-google"><a href="sign-in.html "
                                                 class=""><img src="assets/img/icon/google.svg" class="me-2" alt=""  height="20px" width="20px"> Continue with Google</a></button>
                                     </div>
