--- a/sign-in.html
+++ b/sign-in.html
@@ -46,7 +46,7 @@
     <main class="container">
                 <div class="row  form-row" >
                     <div class="col-lg-8 sign-col-left">
-                        <div class="d-flex justify-content-start ">
+                        <div class="d-flex justify-content-start logo-div">
                             <a class="navbar-brand-sign  mb-2" href="index.html">
                                 <img src="assets/img/bid-logo.jpeg" alt="" class="img-fluid">
                             </a>
