--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <li class="nav-item">
                                    
                                     <div class="sec-center ms-4 profile-drop-desktop"> 	
-                                        <input class="dropdown" type="checkbox" id="dropdown" name="dropdown"/>
+                                        <input class="dropdown-header" type="checkbox" id="dropdown" name="dropdown"/>
                                         <label class="for-dropdown nav-dropdown" for="dropdown">
                                             <a class="nav-link nav-link-icon">
                                                 <i class="fas fa-heart heart"></i>
@@ -101,7 +101,7 @@
                                     <i class="bi bi-search"></i>
                                 </div>
                             <div class="sec-center me-4 pe-1 profile-drop-mobile "> 	
-                                <input class="dropdown" type="checkbox" id="dropdown" name="dropdown"/>
+                                <input class="dropdown-header" type="checkbox" id="dropdown" name="dropdown"/>
                                 <label class="for-dropdown nav-dropdown" for="dropdown">
                                     <a class="nav-link nav-link-icon">
                                         <i class="fas fa-heart heart"></i>
