--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                                 <a href="#">Dropdown Link <i class="uil uil-arrow-right"></i></a>
                                                 <a href="#">Dropdown Link <i class="uil uil-arrow-right"></i></a>
                                             </div> -->
-                                            <a href="#">Profile<i class="uil uil-arrow-right"></i></a>
+                                            <a href="profile.html">Profile<i class="uil uil-arrow-right"></i></a>
                                             <a href="#">Log Out <i class="uil uil-arrow-right"></i></a>
                                         </div>
                                     </div>                              
@@ -908,7 +908,7 @@
                                     <h1 class="price mb-0 pb-0">$49.00</h1>
                                     <div class="start-price mb-0 pb-0">Start price</div>
                                     <div class="d-flex justify-content-between align-items-center mt-3">
-                                        <a href=""><button class="deatils">Details</button></a>
+                                        <a href="product-detal.html"><button class="deatils">Details</button></a>
                                         <div class="time d-flex flex-wrap justify-content-end">
                                             <div class="d-flex">
                                                 <b>1</b>&nbsp;Day&nbsp;&nbsp;
@@ -937,7 +937,7 @@
                                     <h1 class="price mb-0 pb-0">$49.00</h1>
                                     <div class="start-price mb-0 pb-0">Start price</div>
                                     <div class="d-flex justify-content-between align-items-center mt-3">
-                                        <a href=""><button class="deatils">Details</button></a>
+                                        <a href="product-detal.html"><button class="deatils">Details</button></a>
                                         <div class="time d-flex flex-wrap justify-content-end">
                                             <div class="d-flex">
                                                 <b>1</b>&nbsp;Day&nbsp;&nbsp;
@@ -966,7 +966,7 @@
                                     <h1 class="price mb-0 pb-0">$49.00</h1>
                                     <div class="start-price mb-0 pb-0">Start price</div>
                                     <div class="d-flex justify-content-between align-items-center mt-3">
-                                        <a href=""><button class="deatils">Details</button></a>
+                                        <a href="product-detal.html"><button class="deatils">Details</button></a>
                                         <div class="time d-flex flex-wrap justify-content-end">
                                             <div class="d-flex">
                                                 <b>1</b>&nbsp;Day&nbsp;&nbsp;
@@ -995,7 +995,7 @@
                                     <h1 class="price mb-0 pb-0">$49.00</h1>
                                     <div class="start-price mb-0 pb-0">Start price</div>
                                     <div class="d-flex justify-content-between align-items-center mt-3">
-                                        <a href=""><button class="deatils">Details</button></a>
+                                        <a href="product-detal.html"><button class="deatils">Details</button></a>
                                         <div class="time d-flex flex-wrap justify-content-end">
                                             <div class="d-flex">
                                                 <b>1</b>&nbsp;Day&nbsp;&nbsp;
@@ -1024,7 +1024,7 @@
                                     <h1 class="price mb-0 pb-0">$49.00</h1>
                                     <div class="start-price mb-0 pb-0">Start price</div>
                                     <div class="d-flex justify-content-between align-items-center mt-3">
-                                        <a href=""><button class="deatils">Details</button></a>
+                                        <a href="product-detal.html"><button class="deatils">Details</button></a>
                                         <div class="time d-flex flex-wrap justify-content-end">
                                             <div class="d-flex">
                                                 <b>1</b>&nbsp;Day&nbsp;&nbsp;
@@ -1053,7 +1053,7 @@
                                     <h1 class="price mb-0 pb-0">$49.00</h1>
                                     <div class="start-price mb-0 pb-0">Start price</div>
                                     <div class="d-flex justify-content-between align-items-center mt-3">
-                                        <a href=""><button class="deatils">Details</button></a>
+                                        <a href="product-detal.html"><button class="deatils">Details</button></a>
                                         <div class="time d-flex flex-wrap justify-content-end">
                                             <div class="d-flex">
                                                 <b>1</b>&nbsp;Day&nbsp;&nbsp;
