--- a/edit-profile.html
+++ b/edit-profile.html
@@ -245,7 +245,7 @@
 
                     <div class="shadow-bg-profile ">
                         <h1 class="text-primary f-20 w-500 mb-5 mt-2">Edit Personal Detail</h1>
-                        <div class="d-flex mb-4">
+                        <div class="d-flex mb-4 profile-data">
                             <div class="info-heading">
                               <h2 class="f-18 w-500 ">Name :</h2>
                             </div>
@@ -253,7 +253,7 @@
                                     <input type="email" class="form-control" value="Muhammad Awais">
                             </div>
                         </div>
-                        <div class="d-flex mb-4">
+                        <div class="d-flex mb-4 profile-data ">
                             <div class="info-heading">
                               <h2 class="f-18 w-500 ">Email:</h2>
                             </div>
@@ -261,7 +261,7 @@
                                 <input type="email" class="form-control" value="gmail.com">
                             </div>
                         </div>
-                        <div class="d-flex mb-4">
+                        <div class="d-flex profile-data mb-4">
                             <div class="info-heading">
                               <h2 class="f-18 w-500 ">Phone :</h2>
                             </div>
@@ -269,7 +269,7 @@
                                 <input type="email" class="form-control" value="03023958138">
                             </div>
                         </div>
-                        <div class="d-flex mb-4">
+                        <div class="d-flex profile-data mb-4">
                             <div class="info-heading">
                                 <h2 class="f-18 w-500 ">City :</h2>
                             </div>
@@ -277,7 +277,7 @@
                                 <input type="email" class="form-control" value="Lahore">
                             </div>
                         </div>
-                        <div class="d-flex mb-4">
+                        <div class="d-flex profile-data mb-4">
                             <div class="info-heading">
                               <h2 class="f-18 w-500 ">Region :</h2>
                             </div>
@@ -285,7 +285,7 @@
                                 <input type="email" class="form-control" value="akistan ">
                             </div>
                         </div>
-                        <div class="d-flex mb-4">
+                        <div class="d-flex profile-data mb-4">
                             <div class="info-heading">
                               <h2 class="f-18 w-500 ">Country :</h2>
                             </div>
@@ -293,7 +293,7 @@
                                 <input type="email" class="form-control" value="akistan ">
                             </div>
                         </div>
-                        <div class="d-flex mb-4">
+                        <div class="d-flex profile-data mb-4">
                             <div class="info-heading">
                               <h2 class="f-18 w-500 ">Postal Code :</h2>
                             </div>
@@ -301,7 +301,7 @@
                                 <input type="email" class="form-control" value="0986">
                             </div>
                         </div>
-                        <div class="d-flex mb-4 align-items-end">
+                        <div class="d-flex profile-data mb-4 align-items-end">
                             <div class="info-heading">
                               <h2 class="f-18 w-500 ">Address :</h2>
                             </div>
@@ -309,8 +309,7 @@
                                 <textarea name="" id="" cols="60" rows="3" placeholder="Address"></textarea>
                             </div>
                         </div>
-
-                        <div class="d-flex justify-content-end">
+                        <div class="d-flex justify-content-end ">
                             <a href="profile.html" class="px-0"><button class="profile-btn2 ">Back</button></a>
                             <a href="profile.html"><button class="profile-btn ">Save</button></a>
                         </div>
