--- a/profile.html
+++ b/profile.html
@@ -250,7 +250,7 @@
 
                         <div class="shadow-bg-profile ">
                             <h1 class="text-primary f-20 w-500 mb-5 mt-2">Personal Detail</h1>
-                            <div class="d-flex mb-4">
+                            <div class="d-flex mb-4 profile-data">
                                 <div class="info-heading">
                                     <h2 class="f-18 w-500 ">Name :</h2>
                                 </div>
@@ -258,7 +258,7 @@
                                     <h2 class="f-18 w-500 ">Muhammad Awais</h2>
                                 </div>
                             </div>
-                            <div class="d-flex mb-4">
+                            <div class="d-flex mb-4 profile-data">
                                 <div class="info-heading">
                                     <h2 class="f-18 w-500 ">Email:</h2>
                                 </div>
@@ -266,7 +266,7 @@
                                     <h2 class="f-18 w-500 ">gmail.com</h2>
                                 </div>
                             </div>
-                            <div class="d-flex mb-4">
+                            <div class="d-flex mb-4 profile-data">
                                 <div class="info-heading">
                                     <h2 class="f-18 w-500 ">Phone :</h2>
                                 </div>
@@ -274,7 +274,7 @@
                                     <h2 class="f-18 w-500 ">0300 98 56 345</h2>
                                 </div>
                             </div>
-                            <div class="d-flex mb-4">
+                            <div class="d-flex mb-4 profile-data">
                                 <div class="info-heading">
                                     <h2 class="f-18 w-500 ">City :</h2>
                                 </div>
@@ -282,7 +282,7 @@
                                     <h2 class="f-18 w-500 ">Mianwali</h2>
                                 </div>
                             </div>
-                            <div class="d-flex mb-4">
+                            <div class="d-flex mb-4 profile-data">
                                 <div class="info-heading">
                                     <h2 class="f-18 w-500 ">Region :</h2>
                                 </div>
@@ -290,7 +290,7 @@
                                     <h2 class="f-18 w-500 ">Lorem ipsum dolor sit amet.</h2>
                                 </div>
                             </div>
-                            <div class="d-flex mb-4">
+                            <div class="d-flex mb-4 profile-data">
                                 <div class="info-heading">
                                     <h2 class="f-18 w-500 ">Country :</h2>
                                 </div>
@@ -298,7 +298,7 @@
                                     <h2 class="f-18 w-500 ">Pakistan</h2>
                                 </div>
                             </div>
-                            <div class="d-flex mb-4">
+                            <div class="d-flex mb-4 profile-data">
                                 <div class="info-heading">
                                     <h2 class="f-18 w-500 ">Postal Code :</h2>
                                 </div>
@@ -306,7 +306,7 @@
                                     <h2 class="f-18 w-500 ">09865</h2>
                                 </div>
                             </div>
-                            <div class="d-flex mb-4">
+                            <div class="d-flex mb-4 profile-data">
                                 <div class="info-heading">
                                     <h2 class="f-18 w-500 ">Address :</h2>
                                 </div>
