--- a/edit-product-detail.html
+++ b/edit-product-detail.html
@@ -271,6 +271,8 @@
                                             <figure>
                                                 <div>
                                                     <img class="edit-img profile-large img-fluid " src="assets/img/about3.webp" id="output" />
+                                                    <p class="mb-0"><input type="file" accept="image/*" name="image" id="file" onchange="loadFile(event)"
+                                                        style="display: none;"></p>
                                                 </div>
                                             </figure>
                                         </div>
@@ -284,6 +286,8 @@
                                             <figure>
                                                 <div>
                                                     <img class="edit-img profile-large img-fluid " src="assets/img/about2.jpg" id="output" />
+                                                    <p class="mb-0"><input type="file" accept="image/*" name="image" id="file" onchange="loadFile(event)"
+                                                        style="display: none;"></p>
                                                 </div>
                                             </figure>
                                         </div>
@@ -297,6 +301,8 @@
                                             <figure>
                                                 <div>
                                                     <img class="edit-img profile-large img-fluid " src="assets/img/about1.jpg" id="output" />
+                                                    <p class="mb-0"><input type="file" accept="image/*" name="image" id="file" onchange="loadFile(event)"
+                                                        style="display: none;"></p>
                                                 </div>
                                             </figure>
                                         </div>
